<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, main!</string>
    <string name="app_name">卓鱼碰撞泡泡锁屏</string>
    <string name="experience">体验</string>
    
    <string name="tab1">主页</string>
    <string name="tab2">推荐</string>
    <string name="tab3">反馈</string>
    <string name="tab4">更新</string>
    <string name="tab5">退出</string>
    
    <string name="main_home">首页</string>
    <string name="main_news">信息</string>
    <string name="main_my_info">我的资料</string>
    <string name="menu_search">搜索</string>
    <string name="more">更多</string>
 
</resources>
